<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView_result"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:background="#EEE"
        android:gravity="end|center_vertical"
        android:padding="16dp"
        android:text=""
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <GridLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:columnCount="4"
        android:rowCount="5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView_result">

        <Button
            android:id="@+id/button7"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:onClick="onDigit"
            android:text="@string/seven"
            android:textSize="24sp"
            style="?android:attr/button" />

        <Button
            android:id="@+id/button8"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:onClick="onDigit"
            android:text="@string/eight"
            android:textSize="24sp"
            style="?android:attr/button"/>

        <Button
            android:id="@+id/button9"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:onClick="onDigit"
            android:text="@string/nine"
            android:textSize="24sp"
            style="?android:attr/button"/>

        <Button
            android:id="@+id/button_divide"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:onClick="onOperator"
            android:text="@string/divide"
            android:textSize="24sp"
            style="?android:attr/button"/>

        <Button
            android:id="@+id/button4"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:onClick="onDigit"
            android:text="@string/four"
            android:textSize="24sp"
            style="?android:attr/button"/>

        <Button
            android:id="@+id/button5"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:onClick="onDigit"
            android:text="@string/five"
            android:textSize="24sp"
            style="?android:attr/button"/>

        <Button
            android:id="@+id/button6"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:onClick="onDigit"
            android:text="@string/six"
            android:textSize="24sp"
            style="?android:attr/button"/>

        <Button
            android:id="@+id/button_multiply"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:onClick="onOperator"
            android:text="@string/multiply"
            android:textSize="24sp"
            style="?android:attr/button"/>

        <Button
            android:id="@+id/button1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:onClick="onDigit"
            android:text="@string/one"
            android:textSize="24sp"
            style="?android:attr/button"/>

        <Button
            android:id="@+id/button2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:onClick="onDigit"
            android:text="@string/two"
            android:textSize="24sp"
            style="?android:attr/button"/>

        <Button
            android:id="@+id/button3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:onClick="onDigit"
            android:text="@string/three"
            android:textSize="24sp"
            style="?android:attr/button"/>

        <Button
            android:id="@+id/button_subtract"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:onClick="onOperator"
            android:text="@string/subtract"
            android:textSize="24sp"
            style="?android:attr/button"/>

        <Button
            android:id="@+id/button_dot"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:onClick="onDecimalPoint"
            android:text="@string/dot"
            android:textSize="24sp"
            style="?android:attr/button"/>

        <Button
            android:id="@+id/button0"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:onClick="onDigit"
            android:text="@string/zero"
            android:textSize="24sp"
            style="?android:attr/button"/>

        <Button
            android:id="@+id/button_clear"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:onClick="onClear"
            android:text="@string/clear"
            android:textSize="24sp"
            style="?android:attr/button"/>

        <Button
            android:id="@+id/button_addition"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:onClick="onOperator"
            android:text="@string/addition"
            android:textSize="24sp"
            style="?android:attr/button"/>

        <Button
            android:id="@+id/button_equal"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnSpan="4"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:onClick="onEqual"
            android:text="@string/equal"
            android:textSize="24sp"
            style="?android:attr/button"/>

    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
